# c_hw1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpplint/: run.sh
cpplint/cpplint/: CPPLINT.cfg
data/: consistent_res.txt  consistent_time.txt  input_test.txt  parallel_res.txt  parallel_time.txt  test.txt
linters/: run.sh
project/: CMakeLists.txt  from_one_to_three.c  from_one_to_three.h  input_data.c  input_data.h  main.c  parallel_prog.c  prog.c  prog.h
project/include/: from_one_to_three.h  input_data.h  prog.h
project/src/: from_one_to_three.c  input_data.c  main.c  parallel_prog.c
tests/: comparison.cpp  consistent_stress_test.cpp  input_test.cpp  parallel_prog_test.cpp  parallel_stress_test.cpp  prog_test.cpp  test.cpp
